Removed deprecated method call.